# htmx_presentation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/: pyproject.toml
project/app/: database.py  logger_config.py  main.py  middleware.py
project/app/db/active/: chinook.db
project/app/endpoints/: application.py  children.py  crud.py  routes.py  search.py
project/app/models/: albums.py  artists.py  combined.py  customers.py  employees.py  fields.py  genres.py  invoice_items.py  invoices.py  media_types.py  metadata.py  playlist_track.py  playlists.py  search.py  tracks.py
project/app/static/css/: styles.css
project/app/static/js/: application.js
project/app/templates/: about.html  albums.html  application.html  artists.html  base.html  customers.html  employees.html  header.html  home.html  home_save.html  test.html
project/app/templates/partials/: albums.html  artists.html  customers.html  employees.html  pagination.html
project/app/templates/test_files/: 336253754b.js  application.js
