[project]
name = "fastapi-presentation"
version = "0.1.0"
description = "A FastAPI example application"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "aiosqlite==0.21.0",
    "fastapi==0.115.13",
    "greenlet==3.2.3",
    "jinja-partials==0.3.0",
    "jinja2==3.1.6",
    "sqlmodel==0.0.24",
    "uvicorn==0.34.3",
    "uvloop==0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pip-audit==2.9.0",
    "pre-commit==4.2.0",
    "ruff==0.12.0",
]
